--- a/PruebaConcepto_WEB/build.properties
+++ b/PruebaConcepto_WEB/build.properties
@@ -2,5 +2,5 @@
 tcserver.home=/home/jose/Dev/Certifactura/vfabric-tc-server-developer-2.6.5.RELEASE/certifactura
 tcserver.lib=/home/jose/Dev/Certifactura/vfabric-tc-server-developer-2.6.5.RELEASE/certifactura/certifacturaLibs
 tcserver.base=/home/jose/Dev/Certifactura/vfabric-tc-server-developer-2.6.5.RELEASE/tomcat-7.0.26.A.RELEASE
-deploy.war.path=/home/jose/Dev/Certifactura/vfabric-tc-server-developer-2.6.5.RELEASE/certifactura/webapps
+#deploy.war.path=/home/oscarpachon/git/repositorioVertical/PruebaConcepto_WEB/webapps
 deploy.server.war.path=\\192.168.2.200\jetty\jetty-hightide-8.1.7.v20120910\webapps
