--- a/PruebaConcepto_WEB/build.xml
+++ b/PruebaConcepto_WEB/build.xml
@@ -100,11 +100,11 @@
 	</target>
 
 	<target name="deploywar" depends="clean,compile,dist" description="Deploy application as a WAR file">		
-		<copy todir="${deploy.server.war.path}" preservelastmodified="true">
+		<scp todir="${deploy.server.war.path}" preservelastmodified="true">
 			<fileset dir="${dist.home}/">
 				<include name="${app.name}.war" />
 			</fileset>
-		</copy>
+		</scp>
 	</target>
 	
 	<target name="war" depends="compile">
