--- a/PruebaConcepto_WEB/build.properties
+++ b/PruebaConcepto_WEB/build.properties
@@ -3,4 +3,4 @@ tcserver.home=/home/jose/Dev/Certifactura/vfabric-tc-server-developer-2.6.5.RELE
 tcserver.lib=/home/jose/Dev/Certifactura/vfabric-tc-server-developer-2.6.5.RELEASE/certifactura/certifacturaLibs
 tcserver.base=/home/jose/Dev/Certifactura/vfabric-tc-server-developer-2.6.5.RELEASE/tomcat-7.0.26.A.RELEASE
 #deploy.war.path=/home/oscarpachon/git/repositorioVertical/PruebaConcepto_WEB/webapps
-deploy.server.war.path=///Administrator:Bogota2012@192.168.2.200/c$/jetty/jetty-hightide-8.1.7.v20120910/webapps
+deploy.server.war.path=Administrator:Bogota2012@192.168.2.200/c$/jetty/jetty-hightide-8.1.7.v20120910/webapps
